fix: add media query to scrollbar

--- a/talk/slides.css
+++ b/talk/slides.css
@@ -33,22 +33,34 @@
 }
 
 ::-webkit-scrollbar {
-  width: 24px;
+  width: 12px;
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  border-radius: 10px;
+  background: var(--bg-color);
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  border: 1px solid black;
+  border-radius: 4px;
   background: linear-gradient(to bottom, deepskyblue 0%, deepskyblue 20%, 
     pink 20%, pink 40%, white 40%, white 60%, 
     pink 60%, pink 80%, deepskyblue 80%, deepskyblue 100%);
-  box-shadow: inset 0 0 8px rgba(0,0,0,0.8); 
+  box-shadow: inset 0 0 4px rgba(0,0,0,0.8); 
 }
+
+@media (min-width: 1600px) {
+  ::-webkit-scrollbar {
+    width: 24px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 8px rgba(0,0,0,0.8); 
+  }    
+
+}
+
+
 
 * {
   box-sizing: border-box;
